--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="custom.css">
+
   <h1>About Me</h1>
-  <p>My name is Sia Kian Zhong... I have no <b>life</b>... Help me...</p>
+  <p>My name is Sia Kian Zhong... I am a sexy boi but i have no <b>life</b>... Help me...</p>
   <h2>Achievements</h2>
 
   <ul>
     <li>Professional Wanker</li>
-    <li>Procrastinator</li>
-    <li>CAP 0.5</li>
-    <li>Fastest wank ever 0.00001s</li>
+    <li class="bluetext">Professional Wanker</li>
+    <li class="eww">M</br>Y</br> </br>D</br>I</br>C</br>K</br></li>
+    <li class="disgust">Procrastinator</li>
+    <li class="grosspurple">CAP 0.5</li>
+    <li style="font-family:Comic Sans MS">Fastest wank ever 0.00001s</li>
   </ul>
 
   <h3> Steps for a better life</h3>
